--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row top">
             <div class="column">
                 <img src="/html-css-shop/img/pd1.jpeg" alt="Ipad">
-                <div class="sconto green">-30%</div>
+                <div class="sconto">-30%</div>
                 <div class="heart">&hearts;</div>                    
             </div>
             <div class="column">
@@ -22,14 +22,14 @@
             </div>
             <div class="column">
                 <img src="/html-css-shop/img/pd3.jpeg" alt="Cuffie"> 
-                <div class="sconto green">-30%</div>   
+                <div class="sconto">-30%</div>   
                 <div class="heart">&hearts;</div>  
             </div>
         </div>
         <div class="row bottom">
             <div class="column">
                 <img src="/html-css-shop/img/pd1.jpeg" alt="Ipad">
-                <div class="sconto green">-30%</div>  
+                <div class="sconto">-30%</div>  
                 <div class="heart">&hearts;</div>                    
             </div>
             <div class="column">
@@ -39,7 +39,7 @@
             </div>
             <div class="column">
                 <img src="/html-css-shop/img/pd3.jpeg" alt="Cuffie"> 
-                <div class="sconto green">-30%</div>   
+                <div class="sconto">-30%</div>   
                 <div class="heart">&hearts;</div>  
             </div>
         </div>
