Aggiornato i path delle immagini

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     <div class="container">
         <div class="row top">
             <div class="column">
-                <img src="/html-css-shop/img/pd1.jpeg" alt="Ipad">
+                <img src="img/pd1.jpeg" alt="Ipad">
                 <div class="sconto">-30%</div>
                 <div class="heart">&hearts;</div>                    
             </div>
             <div class="column">
-                <img src="/html-css-shop/img/pd2.jpeg" alt="Iphone">
+                <img src="img/pd2.jpeg" alt="Iphone">
                 <div class="sconto red">-5%</div> 
                 <div class="heart">&hearts;</div>    
             </div>
             <div class="column">
-                <img src="/html-css-shop/img/pd3.jpeg" alt="Cuffie"> 
+                <img src="img/pd3.jpeg" alt="Cuffie"> 
                 <div class="sconto">-30%</div>   
                 <div class="heart">&hearts;</div>  
             </div>
         </div>
         <div class="row bottom">
             <div class="column">
-                <img src="/html-css-shop/img/pd1.jpeg" alt="Ipad">
+                <img src="img/pd1.jpeg" alt="Ipad">
                 <div class="sconto">-30%</div>  
                 <div class="heart">&hearts;</div>                    
             </div>
             <div class="column">
-                <img src="/html-css-shop/img/pd2.jpeg" alt="Iphone">
+                <img src="img/pd2.jpeg" alt="Iphone">
                 <div class="sconto red">-5%</div>   
                 <div class="heart">&hearts;</div>  
             </div>
             <div class="column">
-                <img src="/html-css-shop/img/pd3.jpeg" alt="Cuffie"> 
+                <img src="img/pd3.jpeg" alt="Cuffie"> 
                 <div class="sconto">-30%</div>   
                 <div class="heart">&hearts;</div>  
             </div>
